movies that conataions love

--- a/duckdb_pandas.ipynb
+++ b/duckdb_pandas.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "8f4393bd",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9252fca9",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "820ebe7e",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "4     CHICAGO NORTH     185"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "581688e8",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "46"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,15 +166,397 @@
    "id": "83ad6ebe",
    "metadata": {},
    "source": [
-    "## Movies that contains \"love\""
+    "## Movies that contains \"love\" in it's title"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0862a89b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column_name</th>\n",
+       "      <th>column_type</th>\n",
+       "      <th>null</th>\n",
+       "      <th>key</th>\n",
+       "      <th>default</th>\n",
+       "      <th>extra</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>film_id</td>\n",
+       "      <td>BIGINT</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>title</td>\n",
+       "      <td>VARCHAR</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>description</td>\n",
+       "      <td>VARCHAR</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>release_year</td>\n",
+       "      <td>VARCHAR</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>language_id</td>\n",
+       "      <td>BIGINT</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>original_language_id</td>\n",
+       "      <td>BIGINT</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>rental_duration</td>\n",
+       "      <td>BIGINT</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>rental_rate</td>\n",
+       "      <td>DOUBLE</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>length</td>\n",
+       "      <td>BIGINT</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>replacement_cost</td>\n",
+       "      <td>DOUBLE</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>rating</td>\n",
+       "      <td>VARCHAR</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>special_features</td>\n",
+       "      <td>VARCHAR</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>last_update</td>\n",
+       "      <td>TIMESTAMP</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             column_name column_type null   key default extra\n",
+       "0                film_id      BIGINT  YES  None    None  None\n",
+       "1                  title     VARCHAR  YES  None    None  None\n",
+       "2            description     VARCHAR  YES  None    None  None\n",
+       "3           release_year     VARCHAR  YES  None    None  None\n",
+       "4            language_id      BIGINT  YES  None    None  None\n",
+       "5   original_language_id      BIGINT  YES  None    None  None\n",
+       "6        rental_duration      BIGINT  YES  None    None  None\n",
+       "7            rental_rate      DOUBLE  YES  None    None  None\n",
+       "8                 length      BIGINT  YES  None    None  None\n",
+       "9       replacement_cost      DOUBLE  YES  None    None  None\n",
+       "10                rating     VARCHAR  YES  None    None  None\n",
+       "11      special_features     VARCHAR  YES  None    None  None\n",
+       "12           last_update   TIMESTAMP  YES  None    None  None"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.sql(\"DESC film\").df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5042bf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>length</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GRAFFITI LOVE</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>117</td>\n",
+       "      <td>A Unbelieveable Epistle of a Sumo Wrestler And...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>IDAHO LOVE</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>172</td>\n",
+       "      <td>A Fast-Paced Drama of a Student And a Crocodil...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>IDENTITY LOVER</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>119</td>\n",
+       "      <td>A Boring Tale of a Composer And a Mad Cow who ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>INDIAN LOVE</td>\n",
+       "      <td>NC-17</td>\n",
+       "      <td>135</td>\n",
+       "      <td>A Insightful Saga of a Mad Scientist And a Mad...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LAWRENCE LOVE</td>\n",
+       "      <td>NC-17</td>\n",
+       "      <td>175</td>\n",
+       "      <td>A Fanciful Yarn of a Database Administrator An...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>LOVE SUICIDES</td>\n",
+       "      <td>R</td>\n",
+       "      <td>181</td>\n",
+       "      <td>A Brilliant Panorama of a Hunter And a Explore...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>LOVELY JINGLE</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>65</td>\n",
+       "      <td>A Fanciful Yarn of a Crocodile And a Forensic ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>LOVER TRUMAN</td>\n",
+       "      <td>G</td>\n",
+       "      <td>75</td>\n",
+       "      <td>A Emotional Yarn of a Robot And a Boy who must...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>LOVERBOY ATTACKS</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>162</td>\n",
+       "      <td>A Boring Story of a Car And a Butler who must ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>STRANGELOVE DESIRE</td>\n",
+       "      <td>NC-17</td>\n",
+       "      <td>103</td>\n",
+       "      <td>A Awe-Inspiring Panorama of a Lumberjack And a...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                title rating  length  \\\n",
+       "0       GRAFFITI LOVE     PG     117   \n",
+       "1          IDAHO LOVE  PG-13     172   \n",
+       "2      IDENTITY LOVER  PG-13     119   \n",
+       "3         INDIAN LOVE  NC-17     135   \n",
+       "4       LAWRENCE LOVE  NC-17     175   \n",
+       "5       LOVE SUICIDES      R     181   \n",
+       "6       LOVELY JINGLE     PG      65   \n",
+       "7        LOVER TRUMAN      G      75   \n",
+       "8    LOVERBOY ATTACKS  PG-13     162   \n",
+       "9  STRANGELOVE DESIRE  NC-17     103   \n",
+       "\n",
+       "                                         description  \n",
+       "0  A Unbelieveable Epistle of a Sumo Wrestler And...  \n",
+       "1  A Fast-Paced Drama of a Student And a Crocodil...  \n",
+       "2  A Boring Tale of a Composer And a Mad Cow who ...  \n",
+       "3  A Insightful Saga of a Mad Scientist And a Mad...  \n",
+       "4  A Fanciful Yarn of a Database Administrator An...  \n",
+       "5  A Brilliant Panorama of a Hunter And a Explore...  \n",
+       "6  A Fanciful Yarn of a Crocodile And a Forensic ...  \n",
+       "7  A Emotional Yarn of a Robot And a Boy who must...  \n",
+       "8  A Boring Story of a Car And a Butler who must ...  \n",
+       "9  A Awe-Inspiring Panorama of a Lumberjack And a...  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "love_titles = conn.sql(\"\"\"\n",
+    "SELECT\n",
+    "    title,\n",
+    "    rating,\n",
+    "    length,\n",
+    "    description\n",
+    "FROM\n",
+    "    film\n",
+    "WHERE title LIKE '%LOVE%';\n",
+    "\"\"\").df()\n",
+    "\n",
+    "love_titles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c759b24d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(love_titles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d110362d",
+   "metadata": {},
+   "source": [
+    "## There is 10 titles that includes \"love\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd0c8f24",
+   "metadata": {},
+   "source": [
+    "## Calculate shortest, median and longest movie length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60c6ece5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (duckdb_analytics_uv)",
+   "display_name": "duckdb-analytics-linus-larsson-mlops25",
    "language": "python",
-   "name": "duckdb-analytics"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
