calculated the movies by average, median, shortest and longest

--- a/duckdb_pandas.ipynb
+++ b/duckdb_pandas.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "820ebe7e",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "4     CHICAGO NORTH     185"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "0862a89b",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
        "12           last_update   TIMESTAMP  YES  None    None  None"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e5042bf0",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
        "9  A Awe-Inspiring Panorama of a Lumberjack And a...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c759b24d",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
        "10"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,16 +540,198 @@
    "id": "dd0c8f24",
    "metadata": {},
    "source": [
-    "## Calculate shortest, median and longest movie length"
+    "## Calculate shortest, median, average and longest movie length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "60c6ece5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   length\n",
+       "0      86\n",
+       "1      48\n",
+       "2      50"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculation_length = conn.sql(\"\"\"\n",
+    "SELECT\n",
+    "    length\n",
+    "FROM\n",
+    "    film\n",
+    "\"\"\").df()\n",
+    "\n",
+    "calculation_length.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b29b064a",
+   "metadata": {},
+   "source": [
+    "## Shortest movie length, 46 minutes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a4ac5dba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "length    46\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculation_length.min()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e40e7d1e",
+   "metadata": {},
+   "source": [
+    "## Longest movie length, 185 minutes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "257e572c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "length    185\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculation_length.max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5e826f9",
+   "metadata": {},
+   "source": [
+    "## Average movie length, 115,3 minutes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2fad4bf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "length    115.272\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculation_length.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19558944",
+   "metadata": {},
+   "source": [
+    "## Median movie length, 114 minutes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cfaf20c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "length    114.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculation_length.median()"
+   ]
   }
  ],
  "metadata": {
