query to get the 10 moste expensive movies to rent

--- a/duckdb_pandas.ipynb
+++ b/duckdb_pandas.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "820ebe7e",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "4     CHICAGO NORTH     185"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "60c6ece5",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
        "2      50"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "a4ac5dba",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "257e572c",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "2fad4bf1",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "cfaf20c0",
    "metadata": {},
    "outputs": [
@@ -724,13 +724,393 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "calculation_length.median()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e70e0ba",
+   "metadata": {},
+   "source": [
+    "## Top 10 most expensive movies to rent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b666db17",
+   "metadata": {},
+   "source": [
+    "Checking what columns to use fro this query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "423fa3f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>film_id</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>title</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>description</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>release_year</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>language_id</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>original_language_id</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>rental_duration</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>rental_rate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>length</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>replacement_cost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>rating</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>special_features</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>last_update</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             column_name\n",
+       "0                film_id\n",
+       "1                  title\n",
+       "2            description\n",
+       "3           release_year\n",
+       "4            language_id\n",
+       "5   original_language_id\n",
+       "6        rental_duration\n",
+       "7            rental_rate\n",
+       "8                 length\n",
+       "9       replacement_cost\n",
+       "10                rating\n",
+       "11      special_features\n",
+       "12           last_update"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.sql(\"DESCRIBE film;\").df()[[\"column_name\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b66f4e5f",
+   "metadata": {},
+   "source": [
+    "Checking the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3e22bb31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>rental_duration</th>\n",
+       "      <th>rental_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>681</th>\n",
+       "      <td>PITTSBURGH HUNCHBACK</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>616</th>\n",
+       "      <td>NATURAL STOCK</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>ZHIVAGO CORE</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>482</th>\n",
+       "      <td>JERICHO MULAN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>BASIC EASY</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    title  rental_duration  rental_rate\n",
+       "681  PITTSBURGH HUNCHBACK                4         4.99\n",
+       "616         NATURAL STOCK                4         0.99\n",
+       "997          ZHIVAGO CORE                6         0.99\n",
+       "482         JERICHO MULAN                3         2.99\n",
+       "56             BASIC EASY                4         2.99"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rent_movie_cost = conn.sql(\"\"\"\n",
+    "SELECT\n",
+    "    title,\n",
+    "    rental_duration,\n",
+    "    rental_rate\n",
+    "FROM film\n",
+    "\"\"\").df()\n",
+    "\n",
+    "rent_movie_cost.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13c2db81",
+   "metadata": {},
+   "source": [
+    "The query to get the most expensive movies to rent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "532500c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>rental_duration</th>\n",
+       "      <th>rental_rate</th>\n",
+       "      <th>cost_per_day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AMERICAN CIRCUS</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.663333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BACKLASH UNDEFEATED</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.663333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BILKO ANONYMOUS</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.663333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BEAST HUNCHBACK</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.663333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CARIBBEAN LIBERTY</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.663333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AUTUMN CROW</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.663333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CASPER DRAGONFLY</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.663333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ACE GOLDFINGER</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.663333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>BEHAVIOR RUNAWAY</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.663333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>CASUALTIES ENCINO</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.663333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 title  rental_duration  rental_rate  cost_per_day\n",
+       "0      AMERICAN CIRCUS                3         4.99      1.663333\n",
+       "1  BACKLASH UNDEFEATED                3         4.99      1.663333\n",
+       "2      BILKO ANONYMOUS                3         4.99      1.663333\n",
+       "3      BEAST HUNCHBACK                3         4.99      1.663333\n",
+       "4    CARIBBEAN LIBERTY                3         4.99      1.663333\n",
+       "5          AUTUMN CROW                3         4.99      1.663333\n",
+       "6     CASPER DRAGONFLY                3         4.99      1.663333\n",
+       "7       ACE GOLDFINGER                3         4.99      1.663333\n",
+       "8     BEHAVIOR RUNAWAY                3         4.99      1.663333\n",
+       "9    CASUALTIES ENCINO                3         4.99      1.663333"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rent_movie_cost = conn.sql(\"\"\"\n",
+    "SELECT\n",
+    "    title,\n",
+    "    rental_duration,\n",
+    "    rental_rate,\n",
+    "    rental_rate / rental_duration AS cost_per_day\n",
+    "FROM film\n",
+    "ORDER BY cost_per_day desc\n",
+    "LIMIT 10;                           \n",
+    "\"\"\").df()\n",
+    "\n",
+    "rent_movie_cost"
    ]
   }
  ],
